hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_bottom_pass_float.php
<?php

$list = new SplDoublyLinkedList();
$list->push("top");
$list->bottom(3.14159);

?>